--- a/csc300x-Web Pages/homePage.css
+++ b/csc300x-Web Pages/homePage.css
@@ -1,3 +1,12 @@
-#container {
-    background-color: brown;
+body {
+    background-color: white;
+    font-size: 14pt;
+}
+
+#nav1 {
+    flex-direction: row;
+   
+ 
+        border: 1px solid blue; border-radius: 2px;
+      
 }
